# backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  DocKer_CheatSheet  Dockerfile  Makefile  Makefile.old  README.md  README_EN.md  README_ES.md  README_dev_steps.txt  docker-compose.yml  estructura  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.ps1
.github/workflows/: ci.yml  docker-build.yml
apps/: requirements.txt
apps/api/app/: main.py
apps/api/tests/: test_health.py
apps/web/: manage.py
apps/web/project/: health.py  settings.py  urls.py  views.py
apps/web/tests/: test_api_health.py  test_django_smoke.py  test_health.py
dev/: docker-compose.yml
infra/nginx/: nginx.conf  security-ssl.conf  site.conf
infra/traefik/: traefik.yml
prod/: docker-compose.traefik.yml  docker-compose.yml
scripts/: wait-for-db.sh
tests/api/: test_api_health.py
tests/web/: test_web_health.py
